add yaml file association

--- a/roles/shadowman_dev_server_builtin/templates/settings.json.j2
+++ b/roles/shadowman_dev_server_builtin/templates/settings.json.j2
@@ -13,6 +13,7 @@
     "ansible.executionEnvironment.image": "{{ ansible_image }}",
     "files.associations": {
         "*.yml": "ansible"
+        ,"*.yaml": "ansible"
     },
     "redhat.telemetry.enabled": false,
     "security.workspace.trust.untrustedFiles": "open",
