--- a/roles/shadowman_dev_server_builtin/templates/settings.json.j2
+++ b/roles/shadowman_dev_server_builtin/templates/settings.json.j2
@@ -12,7 +12,8 @@
     "ansible.executionEnvironment.enabled": true,
     "ansible.executionEnvironment.image": "{{ ansible_image }}",
     "files.associations": {
-        "*.yml": "ansible"
+        "*.yml": "ansible",
+        "*.yaml": "ansible"
     },
     "redhat.telemetry.enabled": false,
     "security.workspace.trust.untrustedFiles": "open",
