Add settings for Dracula extension and theme

--- a/roles/shadowman_dev_server_builtin/templates/settings.json.j2
+++ b/roles/shadowman_dev_server_builtin/templates/settings.json.j2
@@ -7,7 +7,8 @@
     "search.smartCase": true,
     "git.confirmSync": false,
     "git.autofetch": true,
-    "workbench.colorTheme": "Default Dark+",
+    // "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "Dracula",
     "ansible.ansible.useFullyQualifiedCollectionNames": true,
     "ansible.executionEnvironment.enabled": true,
     "ansible.executionEnvironment.image": "{{ ansible_image }}",
