Add setting to remove white spaces

--- a/roles/shadowman_dev_server_builtin/templates/settings.json.j2
+++ b/roles/shadowman_dev_server_builtin/templates/settings.json.j2
@@ -18,5 +18,7 @@
     },
     "redhat.telemetry.enabled": false,
     "security.workspace.trust.untrustedFiles": "open",
-    "files.autoSave": "off"
+    "files.autoSave": "off",
+    "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true
 }
